# blech_clust

./: .blech_config.json.example  .dockerignore  .gitignore  404.html  APPLY_CHANGES_DESIGN.md  CONTRIBUTING.md  DROPDOWN_DESIGN.md  Dockerfile  ENHANCEMENTS.md  FIXED_TIME_WINDOWS_UPDATE.md  INSTALLATION_MIGRATION.md  IPYWIDGETS_ANALYSIS.md  Makefile  README.md  SNIPPET_DESIGN.md  SNIPPET_EXTRACTION_FEATURES.md  __init__.py  blech_autosort.sh  blech_autosort_batch.sh  blech_clean_slate.py  blech_clust.py  blech_clust_post.sh  blech_clust_pre.sh  blech_common_avg_reference.py  blech_data_summary.py  blech_exp_digin_processing.py  blech_exp_file_processing.py  blech_exp_info.py  blech_exp_layout_processing.py  blech_init.py  blech_make_arrays.py  blech_make_psth.py  blech_overlay_psth.py  blech_palatability_identity_setup.py  blech_post_process.py  blech_process.py  blech_run_QA.sh  blech_run_process.sh  blech_trial_info.py  blech_unit_characteristics.py  (+15 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: README.md  update_readme_with_test_results.py
.github/workflows/: docker_build.yml  docs.yml  installation_test.yml  pytest_workflow.yml  python_workflow_test.yml  run_tests.sh
_archive/: blech_electrode_snr.py  blech_process_func.py  blech_process_pom.py  blech_run_auto_process.py  blech_tensor_pca_v2.py  blech_units_visualize.py  electrode_handler.py  fast_car_test.py  grouped_palatability_plot.py  grouped_palatability_setup.py  numeric_node_rename.py
_experimental/: CAR_test.py
_site/: getting-started.html  index.html  search.json  tutorials.html
demos/: car_improvement.py  compare_rolling_units.py  test_rolling_window.py
docs/: .gitignore  README.md  _quarto.yml  build_docs.py  getting-started.qmd  index.md  index.qmd  raw_data_viewer.md  tutorials.md  tutorials.qmd  workflow.md
dummy_tests/: gen_unique_imports_runner.py  get_all_funcs.py
emg/: emg_filter.py  emg_freq_plot.py  emg_freq_post_process.py  emg_freq_setup.py  emg_local_BSA_execute.py  emg_local_STFT_execute.py  emg_run_pipeline.sh
example_meta_files/: GC_PC_taste_odor_spont_210919_175343.info
params/: dependency_graph.json  sorting_params_template.json
pipeline_testing/: README.md  change_auto_params.py  change_emg_freq_method.py  change_waveform_classifier.py  create_dummy_permanent_dataset.py  create_exp_info_commands.py  cut_emg_trials.py  extract_traceback.sh  mark_exp_info_success.py  prefect_pipeline.py  s3_utils.py  select_some_waveforms.py  switch_auto_car.py  test_config_loader.py  toggle_auto_params.py
reference/: index.html
requirements/: conda_requirements_base.sh  conda_requirements_base.txt  emg_install.sh  install_gnu_parallel.sh  patch_dependencies.sh  pip_requirements_base.txt  requirements-dev.txt  requirements-docs.txt  requirements-optional.txt  requirements.txt
scripts/: toggle_auto_params.py
search/: search_index.json
tests/: README.md  conftest.py  test_blech_clust.py  test_blech_common_avg_reference.py  test_blech_exp_info.py  test_blech_make_arrays.py  test_blech_post_process.py  test_blech_process.py  test_blech_reload_amp_digs.py  test_blech_units_characteristics.py  test_blech_units_plot.py  test_blech_waveforms_datashader.py  test_dig_in_handler.py  test_drift_check.py  test_elbo_drift.py  test_emg_filter.py  test_emg_freq_plot.py  test_emg_freq_post_process.py  test_emg_freq_setup.py  test_emg_local_BSA_execute.py  test_emg_local_STFT_execute.py  test_ephys_data.py  test_get_gapes_Li.py  test_infer_rnn_rates.py  test_logs_metadata_dirs.py  test_main.py  test_optional_dependencies.py  test_pipeline_graph_check.py  test_process_functions.py  test_raw_data_loader.py  test_raw_data_viewer.py  test_signal_filters.py  test_unit_similarity.py
tutorials/: index.html
utils/: ClusterHandler.py  basis_psth.py  blech_channel_profile.py  blech_data_summary.py  blech_general_utils.py  blech_hdf5_repack.py  blech_held_units_detect.py  blech_nex_convert.py  blech_post_process_utils.py  blech_process_utils.py  blech_reload_amp_digs.py  blech_spike_features.py  blech_split_h5_files.py  blech_trial_info.py  blech_unit_explorer.py  blech_utils.py  blech_waveforms_datashader.py  change_emg_freq_method.py  cluster_stability.py  clustering.py  create_exp_info_commands.py  fix_laser_sampling_errors.py  grade_dataset.py  grading_metrics.json  importrhdutilities.py  infer_glm_rates.py  infer_rnn_rates.py  interactive_viewer.py  makeRaisedCosBasis.py  qa_utils.py  ram_monitor.py  raw_data_loader.py  read_file.py  reset_blech_clust.py  select_some_waveforms.py  signal_filters.py
workflow/: index.html
(+173 files in other folders)
